changed link to event page

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<div  class="inner">
 								<h3>Papadi Park</h3>
 								<p>Papadi Park class visits make learning so much fun. We turn any curriculum into thee greatest and most exciting experience ever! We use dramatization, Games, Made up songs and many more “learn-through-play” methods.</p>
-								<a href="https://www.21chunks.co.za/event.html" class="button special">Book a session for your school</a>
+								<a href="event.html" class="button special">Book a session for your school</a>
 							</div>
 						</div>
 						<div class="spotlight alt">
@@ -92,7 +92,7 @@
 								<p>Did someone say PLAY?</p> 
 								<p>Yes, ha re Bapaleng! Lets play! Papadi park Pop-up play centres are here!</p>
 								<p>Papadi park Pop-up play centres are fully mobile. Our play areas are filled with exciting activities. Papadi Park Pop-up play centres make any party a great success. We bring lots of fun to many events for children. Our Birthday party entertainment is structured to bring lots of fun for everyone. School events become extra fun when Papadi park is around.</p>
-								<a href="https://www.21chunks.co.za/event.html" class="button">Book a show for an event</a>
+								<a href="event.html" class="button">Book a show for an event</a>
 							</div>
 							</div>
 						</div>
