added link to home in events

--- a/event.html
+++ b/event.html
@@ -10,7 +10,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Papadi Park <span>part of 21 Chunks Group</span></a></div>
+				<div class="logo"><a href="index.html">Papadi Park <span>part of 21 Chunks Group</span></a></div>
 			</header>
 
 		<!-- Main -->
